# netwatch-agent

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: capture.rs  collector.rs  config.rs  host.rs  main.rs  otel.rs  sender.rs  update.rs
