[workspace]
members = ["crates/netwatch-core"]

[package]
name = "netwatch-agent"
version = "0.2.0"
edition = "2021"
description = "Lightweight Linux agent for NetWatch Cloud — collects system and network metrics"
license = "MIT"
repository = "https://github.com/matthart1983/netwatch-agent"

[dependencies]
netwatch-core = { path = "crates/netwatch-core" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
